2004-09-26  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (get_incase_label): Error if label is undef.

2004-09-25  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl: Generate TODO list.
	(method2perl): Use "dis".
	(disdoc2pod, disdoc2text): 'HTML', 'InfosetP' element types added.
	(perl_builtin_code): New code 'isRelativeDOMURI' added.

	* ManakaiDOMMain.dis (MDOM_REPLACE_BY_ITSELF_NO_EFFECT): New
	warning code.

	* dis2pm.pl (attr2perl, method2perl): Output 'undef;' if the 
	method or attribute(set) does not return a value.
	(perl_code): New macro 'WHEN' added.  Macro 'INT{}' now allow
	parameter.

2004-09-24  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (perl_exception): New 'subtype' parameter added.
	(param2poditem): New.
	(MAIN): Write 'NAMESPACE BINDINGS' pod section if necessary.
	(perl_builtin_code): More developer-friendly error report.
	(perl_code): New 'REQUIRE' statement added.
	(disdoc2text, disdoc2pod): New 'QUOTE' element type added.
	(get_value_literal): Default for unknown type is now 'undef'.

2004-09-22  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (perl_builtin_code): New 'CheckName' and 
	'XMLVersion' added.

2004-09-20  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (get_redef_description): See 'RedefinedBy' elements 
	even if it is 'ReMethod' and 'ReAttr' element.

2004-09-20  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (type_label): New option 'is_pod' implemented.
	(get_redef_description): New function.
	(get_isa_description): New function.
	(disdoc2pod, disdoc2text): New.
	(get_description): DISDOC support.
	(valid_err, valid_err): New option 'node' implemented.

	* ManakaiDOMCore.dis (IF[ManakaiDOMNodeObjectNode]): New.

2004-09-19  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (condition_match): Report error if the condition 
	not defined.

	* ManakaiDOMMain.dis (MDOM_IMPL_BY_APP): New exception code.

	* dis2pm.pl (datatype2perl, datatypealias2perl): "FullName" attribute 
	introduced.
	(constgroup2perl): Define is-a relationship between group 